--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "mongoose": "^5.9.10",
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
+    "react-player": "^2.0.1",
     "validator": "^12.2.0"
   },
   "devDependencies": {
